--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <body>
     <h1>Welcome to poem generator!</h1>
 
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/lea-bee" target="_blank">Leah Twigg</a> and is
+      open-sourced on
+      <a href="https://github.com/lea-bee/poem-generator" target="_blank"
+        >Github</a
+      >
+      and is hosted on <a href="">Vercel.</a>
+    </footer>
+
     <script src="src/script.js"></script>
   </body>
 </html>
