Updated links in footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <a href="https://github.com/lea-bee/poem-generator" target="_blank"
         >Github</a
       >
-      and is hosted on <a href="">Vercel.</a>
+      and is hosted on
+      <a href="https://poem-generator-phi.vercel.app/" target="_blank"
+        >Vercel.</a
+      >
     </footer>
 
     <script src="src/script.js"></script>
