Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <title>Poem</title>
   </head>
   <body>
-    <h1>Welcome to poem generator!</h1>
+    <header>
+      <h1>Welcome to poem generator!</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        La tombe dit à la rose
+        <br />
+        Des pleurs dont l'aube t'arrose
+      </div>
+    </main>
 
     <footer>
       This AI project was coded by
