--- a/index.html
+++ b/index.html
@@ -4,51 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
-    <title>Poem Generator!</title>
+    <title>AI Poem Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI Poem Generator</h1>
+        <h1>AI Afrikaans Poem Generator 🖋</h1>
       </header>
 
       <main>
-        <form id="poem-generator-form">
-          <input
-            type="text"
-            placeholder="Enter the topic of the poem"
-            autofocus
-            required
-            autocomplete="off"
-            class="prompt"
-          />
-          <input type="submit" class="submit-button" />
-        </form>
-        <div class="poem" id="poem-box"></div>
-      </main>
-    </div>
-    <footer>
-      This AI project was coded by
-      <strong
-        ><a href="https://github.com/lea-bee" target="_blank"
-          >Leah Twigg</a
-        ></strong
-      >
-      and is open-sourced on
-      <strong
-        ><a href="https://github.com/lea-bee/poem-generator" target="_blank"
-          >Github</a
-        ></strong
-      >
-      and is hosted on
-      <strong
-        ><a href="https://poem-generator-phi.vercel.app/" target="_blank"
-          >Vercel.</a
-        ></strong
-      >
-    </footer>
+        <div class="form-container">
+          <form id="poem-generator-form">
+            <input
+              type="text"
+              placeholder="Enter the topic of the poem"
+              autofocus
+              required
+              autocomplete="off"
+              class="prompt"
+              id="user-prompt"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="hint">i.e: Flower, Paris or Cheese</div>
+        </div>
 
+        <div class="poem hidden" id="poem-box"></div>
+      </main>
+
+      <footer>
+        This AI project was coded by
+        <strong
+          ><a href="https://github.com/lea-bee" target="_blank"
+            >Leah Twigg</a
+          ></strong
+        >
+        and is open-sourced on
+        <strong
+          ><a href="https://github.com/lea-bee/poem-generator" target="_blank"
+            >Github</a
+          ></strong
+        >
+        and is hosted on
+        <strong
+          ><a href="https://poem-generator-phi.vercel.app/" target="_blank"
+            >Vercel.</a
+          ></strong
+        >
+      </footer>
+    </div>
     <script src="src/script.js"></script>
   </body>
 </html>
